--- a/week14/includes/header.html
+++ b/week14/includes/header.html
@@ -18,9 +18,16 @@
 			<li><a href="register.php">Register</a></li>
 			<li><a href="view_users.php">View Users</a></li>
 			<li><a href="password.php">Change Password</a></li>
+			<li><?php // Create a login/logout link:
+if (isset($_SESSION['user_id'])) {
+	echo '<a href="logout.php">Logout</a>';
+} else {
+	echo '<a href="login.php">Login</a>';
+}
+?></li>
 		</ul>
 		</div>
 	</div>
 </nav>
 <div class="container">
-<!-- Script 9.1 - header.html -->
+<!-- Script 12.10 - header.html -->
