--- a/final/includes/header.html
+++ b/final/includes/header.html
@@ -1,26 +1,39 @@
-<html>
-    <head>
-        <title>Star Wars Space Transit Network</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <header>
-            <h1>Space Transit Network</h1>
-            <nav>
-                <ul>
-                    <li><a href="planets.php">Planets</a></li>
-                    <li><?php // Create a login/logout link:
-                        if (isset($_SESSION['user_id'])) {
-                            echo '<a href="logout.php">Logout</a>';
-                        } else {
-                            echo '<a href="login.php">Login</a>';
-                        }
-                        ?></li>
-                    <li><a href="users/user_list.php">Users</a></li>
-                    <?php if ($role === 'Admin'): ?>
-                        <li><a href="list_planets.php">Planet list</a></li>
-                        <li><a href="list_user.php">User list</a></li>
-                    <?php endif; ?>
-                </ul>
-            </nav>
-        </header>
+<?php
+
+$role = isset($_SESSION['role']) ? $_SESSION['role'] : ''; // Get the user role from the session
+?>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Star Wars Space Transit Network</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Space Transit Network</h1>
+        <nav>
+            <ul>
+                <li><a href="planets.php">Planets</a></li>
+                <li>
+                    <?php
+                    // Create a login/logout link:
+                    if (isset($_SESSION['user_id'])) {
+                        echo '<a href="logout.php">Logout</a>';
+                    } else {
+                        echo '<a href="login.php">Login</a>';
+                    }
+                    ?>
+                </li>
+                <li><a href="users/user_list.php">Users</a></li>
+                <?php if ($role === 'Admin'): ?>
+                    <li><a href="list_planets.php">Planet list</a></li>
+                    <li><a href="list_user.php">User list</a></li>
+                <?php endif; ?>
+            </ul>
+        </nav>
+    </header>
+</body>
+</html>
