--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -24,34 +24,36 @@ h1 {
     text-decoration: none;
     font-size: 1.2em;
   }
-.dropdown .dropbtn {
-    cursor: pointer;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+/* Dropdown menu */
+  ul {
+    list-style: none;
+    padding-inline-start: 0;
+  }
+  ul li{
+    display: inline-block;
+    position: relative; 
+  }
+  ul li a {
+    display: block;
+    padding: 20px 25px;
+    color: #FFF;
     text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
+    text-align: center;
+    font-size: 20px;
+  }
+  ul li ul.dropdown li{
+    display:block;
+  }
+  ul li ul.dropdown {
+    width: 100%;
+    background: #9d9e9f;
+    position: absolute;
+    z-index: 999;
+    display: none;
+  }
+  ul li a:hover {
+    color: #b0b0b0;
+  }
+  ul li:hover ul.dropdown {
+    display: block
+  }
