--- a/final/includes/header.html
+++ b/final/includes/header.html
@@ -26,13 +26,13 @@
                     <li><a href="list_planets.php">Planet list</a></li>
                     <li><a href="list_user.php">User list</a></li>
                 <?php endif; ?>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Menu</a>
-                    <div class="dropdown-content">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
-                    </div>
+                <li>
+                    <a href="#">More Options ▽</a>
+                    <ul class="dropdown">
+                      <li><a href="play.php">Playstation</a</li>
+                      <li><a href="xbox.php">Xbox</a></li>
+                      <li><a href="PC.php">PC</a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
