--- a/final/includes/header.html
+++ b/final/includes/header.html
@@ -22,10 +22,12 @@
                     ?>
                 </li>
                 <li><a href="users/user_list.php">Users</a></li>
-                <?php if ($role === 'Admin'): ?>
-                    <li><a href="list_planets.php">Planet list</a></li>
-                    <li><a href="list_user.php">User list</a></li>
-                <?php endif; ?>
             </ul>
+            <?php if ($role === 'Admin'): ?>
+            <ul>
+            <li><a href="list_planets.php">Planet list</a></li>
+            <li><a href="list_user.php">User list</a></li>
+            </ul>
+        <?php endif; ?>
         </nav>
-    </header>>
+    </header>
