Added Current Role

--- a/final/includes/footer.html
+++ b/final/includes/footer.html
@@ -2,6 +2,7 @@
 	<div class="container">
 		<p class="text-muted"><p>Copyright &copy; 2024</p>
 	</div>
+	<h2>Current Role: <?= $role; ?></h2>
 	<form method="post" action="">
 		<input type="hidden" name="toggle_role" value="toggle">
 		<button type="submit">
