--- a/final/includes/footer.html
+++ b/final/includes/footer.html
@@ -1,9 +1,6 @@
 <!-- Script 3.3 - footer.html -->
-</div>
-<footer class="footer">
-	<div class="container">
-		<p class="text-muted"><p>Copyright &copy; 2024</p>
-	</div>
+<footer>
+<p class="text-muted"><p>Copyright &copy; 2024</p>
 </footer>
 </body>
 </html>
