--- a/final/includes/header.html
+++ b/final/includes/header.html
@@ -1,3 +1,12 @@
+<?php
+
+$isAdmin = isset($_SESSION['user_role']) && $_SESSION['user_role'] === 'Admin';
+
+
+
+?>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
