--- a/final/user/reg/reg.css
+++ b/final/user/reg/reg.css
@@ -10,9 +10,9 @@ body {
   .section1 {
     flex: 1;
   }
-  .section2: {
+  .section2 {
     flex: 1;
   }
-  .section3: {
+  .section3 {
     flex: 1;
   } 
