--- a/final/user/reg/reg.css
+++ b/final/user/reg/reg.css
@@ -4,15 +4,25 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.container {
+
+.flex-container {
     display: flex;
-  }
-  .section1 {
-    flex: 1;
-  }
-  .section2 {
-    flex: 1;
-  }
-  .section3 {
-    flex: 1;
-  } 
+    justify-content: space-between; 
+    padding: 10px;
+}
+
+
+.flex-group {
+    display: flex;
+    flex-direction: column; 
+    flex: 1; 
+    gap: 10px;
+}
+
+
+.flex-item {
+    background-color: #f0f0f0;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid #ccc; 
+}
