--- a/final/css/user_list.css
+++ b/final/css/user_list.css
@@ -41,8 +41,8 @@ tbody tr:nth-child(even) {
 }
 
 .dark-users tbody tr {
-    background-color: #333;
-    color: white;
+    background-color: #DC143C;
+    color: black;
 }
 
 a {
