Fixed syntx error

--- a/final/includes/header.html
+++ b/final/includes/header.html
@@ -24,7 +24,7 @@
 			?>
 			</li>
 			<!-- Need help-->
-			<?php if ($isAdmin); ?>
+			<?php if ($isAdmin): ?>
             <li><a href="planet/planet_list.php">Manage Planets</a></li>
             <li><a href="user/user_list.php">Manage Users</a></li>
         	<?php endif; ?>
