--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -1,24 +1,25 @@
-/* Reset some basic styles */
 body, h1, p, ul, li {
     margin: 0;
     padding: 0;
 }
 
-/* Set a default font and background */
 body {
+    background-image: url(../img/space.jpg);
+    background-size: cover;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+    color: yellow;
     line-height: 1.6;
 }
 
-/* Header styles */
 h1 {
     text-align: center;
     margin-top: 20px;
 }
 
-/* Navigation styles */
+p{
+    font-size: 100%;
+}
+
 nav {
     background-color: #333;
     color: #fff;
@@ -46,17 +47,14 @@ nav ul li a:hover {
     border-radius: 5px;
 }
 
-/* Main content styles */
 main {
     margin: 20px auto;
     padding: 20px;
     max-width: 800px;
-    background-color: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     border-radius: 5px;
 }
 
-/* Footer styles */
 footer {
     text-align: center;
     padding: 10px;
