--- a/final/css/planet.css
+++ b/final/css/planet.css
@@ -13,16 +13,14 @@ body {
     line-height: 1.6;
     padding: 20px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 /* Header styles */
-h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: white;
+header {
+    width: 100%;
 }
 
 /* Main content styles */
@@ -31,49 +29,60 @@ main {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    max-width: 500px;
+    max-width: 800px;
     width: 100%;
-    text-align: center; /* Ensure heading and form elements are centered */
+    margin: 20px 0;
 }
 
-/* Form styles */
-form {
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.planet-info {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center align form elements */
+    align-items: center;
 }
 
-label, input {
-    margin-bottom: 15px;
-    width: 100%; /* Ensure inputs take the full width */
+.planet-photo {
+    width: 200px;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    margin-bottom: 20px;
 }
 
-input[type="text"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    width: calc(100% - 22px); /* Adjust width to account for padding and border */
+.planet-details {
+    text-align: center;
+    color: white;
 }
 
-input[type="submit"] {
-    padding: 10px;
+.planet-details p {
+    margin-bottom: 10px;
+}
+
+.planet-details a {
+    color: yellow;
+    text-decoration: none;
     background-color: #333;
-    color: #fff;
-    border: none;
+    padding: 10px 20px;
     border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    width: 100%; /* Ensure the submit button takes the full width */
 }
 
-input[type="submit"]:hover {
+.planet-details a:hover {
     background-color: #575757;
 }
 
-/* Success message styles */
-h4 {
-    color: green;
+/* Footer styles */
+footer {
     text-align: center;
-    margin-top: 20px;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
 }
