--- a/final/css/reg.css
+++ b/final/css/reg.css
@@ -1,9 +1,10 @@
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -17,6 +18,7 @@ h1 {
 nav ul {
     list-style-type: none;
     padding: 0;
+    text-align: center;
 }
 
 nav ul li {
@@ -27,6 +29,14 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: #007bff;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 form {
